--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "emailjs": "^3.4.0",
+    "emailjs-com": "^3.1.0",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
